# byteagenten-marketplace

./: .gitignore  CLAUDE.md  README.md  marketplace.json
.claude-plugin/: marketplace.json
apps/bytcode/: pyproject.toml
apps/bytcode/src/bytcode/: __init__.py  app.py  codebase.py  config.py  orchestrator.py  prompts.py  styles.tcss  team_planning.py  verify.py
apps/bytcode/src/bytcode/agents/: angular-frontend-developer.md  architect-planner.md  code-reviewer.md  postgresql-architect.md  pr-writer.md  push-pr.md  security-auditor.md  spring-boot-developer.md  test-engineer.md
bytagnt-fullstack/: README.md
bytagnt-fullstack/.claude-plugin/: marketplace.json  plugin.json
bytagnt-fullstack/agents/: angular-frontend-developer.md  api-architect.md  architect-planner.md  architect-reviewer.md  code-reviewer.md  postgresql-architect.md  security-auditor.md  spring-boot-developer.md  test-engineer.md  ui-ux-designer.md
bytagnt-fullstack/agents/tests/: performance-log.md
bytagnt-fullstack/commands/: full-stack-feature.md  project-setup.md  python-expert.md  theme-factory.md  ui-design-system.md  ux-researcher-designer.md
bytagnt-fullstack/skills/full-stack-feature/: SKILL.md
bytagnt-fullstack/skills/project-setup/: SKILL.md
plugins/byt8/: .mcp.json  README.md
plugins/byt8/.claude-plugin/: plugin.json
plugins/byt8/agents/: angular-frontend-developer.md  api-architect.md  architect-planner.md  architect-reviewer.md  code-reviewer.md  security-auditor.md  (+5 more)
plugins/bytA/: README.md
plugins/bytM/: .mcp.json  README.md
plugins/bytagnt-fullstack/: README.md
(+114 files in other folders)
